tdf#157703 sw: PDF/UA export: fix headings with labels

The problem is that the new Lbl/LBody elements are produced even for
outline nodes, but those aren't represented as lists at all, but as
headings H1..H10.

Plausible representation of the heading label could be in a Lbl element
inside H1, or simply as plain text; i can't find any recommendation
either way.

Let's try Lbl inside H1, neither veraPDF nor PAC3 complain about it.

(regression from commit 9b38beadf9eaf027b201cdf0ecb2bce5611014dd)

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158127
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 7cb283cf0e92cba4bd53b1cd69816ac7037937e4)

tdf#157703 sw: PDF/UA export: export heading labels as text

Been advised that a Lbl element is not much use in practice.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158421
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 5dfae9e00f245da78613224ed8e0dbd8b6633192)

Change-Id: I691957d0c4a80d1339cb2b87c72c9aa652abfb9a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158423
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <kelemeng@ubuntu.com>